WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130205
REGRESSION(
r165542
): printing/page-rule-selection.html failing
https://bugs.webkit.org/show_bug.cgi?id=130205
Summary
REGRESSION(r165542): printing/page-rule-selection.html failing
Antti Koivisto
Reported
2014-03-13 12:34:35 PDT
fit it
Attachments
patch
(3.00 KB, patch)
2014-03-13 12:38 PDT
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-03-13 12:38:18 PDT
Created
attachment 226613
[details]
patch
Andreas Kling
Comment 2
2014-03-13 12:41:49 PDT
Comment on
attachment 226613
[details]
patch r=me
Antti Koivisto
Comment 3
2014-03-13 12:45:40 PDT
https://trac.webkit.org/r165557
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug