REGRESSION(r165542): printing/page-rule-selection.html failing https://bugs.webkit.org/show_bug.cgi?id=130205

Reviewed by Andreas Kling.

* css/StyleResolver.cpp:
(WebCore::StyleResolver::keyframeStylesForAnimation):
(WebCore::StyleResolver::styleForPage):

    Use Document style as parent when resolving page style.

(WebCore::StyleResolver::applyPropertyToStyle):
* css/StyleResolver.h:

    Get rid of the default null parameter.



Canonical link: https://commits.webkit.org/148151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165557 268f45cc-cd09-0410-ab3c-d52691b4dbfc